--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,19 @@
-/* Add CSS Styling */
+/* Add CSS Styling */ 
+p {
+    background-color: #ff8886;
+    font-family: Verdana, "DejaVu Sans", sans-serif;
+}
+#num-2 {
+    color: #0000ff;
+    font-size: 36px;
+}
+
+.num-3 {
+    font-size: 24px;
+}
+
+#num-4 {
+    background-color: #90ee90;
+    font-size: 24px;
+    font-weight: bold;
+}
